--- a/allonsy/allonsy_main/templates/allonsy/base.html
+++ b/allonsy/allonsy_main/templates/allonsy/base.html
@@ -42,7 +42,7 @@
             <a href="#">My Profile</a>
             <ul class="menu">
               <li><a href="#">Alerts</a></li>
-              <li><a href="#">Interactions</a></li>
+              <li><a href="interactions/">Interactions</a></li>
               <li><a href="#">Preferences</a></li>
               <li><a href="#">Privacy</a></li>
               <li><a href="#">Report Abuse</a></li>
