--- a/allonsy/allonsy_main/templates/allonsy/interactions.html
+++ b/allonsy/allonsy_main/templates/allonsy/interactions.html
@@ -117,98 +117,41 @@
         <div class="columns small-3">
           <div class="row">
             <div class="columns small-12">
-              <div class="row">
-                <div class="columns small-12">
-                  <h5>Affiliations</h5>
-                </div>
-              </div>
-              <div class="row">
-                <div class="columns small-12">
-                  {% for org in orgs_affil %}
-                    <a href="/organization/{{ org.relation_url }}"><span class="label">{{ org.relation_name }}</span></a>
-                  {% endfor %}
-                </div>
-              </div>
+              <h5>Interactions</h5>
             </div>
           </div>
+          {% for interact in cur_user_interacts %}
+          {% for sender in interact.interaction_sender.all %}
           <div class="row">
-            <div class="columns small-12">
-              <div class="row">
-                <div class="columns small-12">
-                  <h5>Interests</h5>
-                </div>
+            <div class="row">
+              <div class="columns small-12">
+                <b>{{ sender.first_name }} {{ sender.last_name }}</b>
               </div>
-              <div class="row">
-                <div class="columns small-12">
-                  {% for org in orgs_affil %}
-                    <a href="/organization/{{ org.relation_url }}"><span class="label">{{ org.relation_name }}</span></a>
-                  {% endfor %}
-                </div>
+            </div>
+            <div class="row">
+              <div class="columns small-12">
+                <p>{{interact.interaction_subject}}</p>
               </div>
             </div>
           </div>
-          <div class="row">
-            <div class="columns small-12">
-              <div class="row">
-                <div class="columns small-12">
-                  <h5>Achievements</h5>
-                </div>
-              </div>
-              <div class="row">
-                <div class="columns small-12">
-                  {% for org in orgs_affil %}
-                    <a href="/organization/{{ org.relation_url }}"><span class="label">{{ org.relation_name }}</span></a>
-                  {% endfor %}
-                </div>
-              </div>
-            </div>
-          </div>
+          {% endfor %}
+          {% endfor %}
         </div>
     <!--Right column-->
         <div class="columns small-9">
-          <div class="row">
-            <div class="columns small-12">
-              <div class="row">
-                <div class="columns small-12">
-                  <h5>About Me</h5>
-                  {{ profile_aboutme.profile_aboutme| linebreaks }}
-                </div>
-              </div>
-              <div class="row">
-                <div class="columns 12-small">
-                  <h5>Our common connections</h5>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="row">
-            <div class="columns small-12">
-              <div class="row">
-                <div class="columns small-12">
-                  <h5>RoomTraits</h5>
-                </div>
-              </div>
-              <div class="row">
-                <div class="columns 12-small">
-                  Text goes here
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="row">
-            <div class="columns small-12">
-              <div class="row">
-                <div class="columns small-12">
-                  <h5>Roommate Recommendations</h5>
-                </div>
-              </div>
-              <div class="row">
-                <div class="columns 12-small">
-                  Text goes here
-                </div>
-              </div>
-            </div>
-          </div>
+          <ul class="vertical menu" data-accordion-menu>
+            {% for interact in cur_user_interacts %}
+            {% for sender in interact.interaction_sender.all %}
+            <li>
+              <a href="#"><b>{{ sender.first_name }} {{ sender.last_name }}:</b> {{interact.interaction_subject}}</a>
+              <ul class="menu vertical nested">
+                <li>{{interact.interaction_text}}</li>
+              </ul>
+            </li>
+            {% endfor %}
+            {% endfor %}
+          </ul>
+
         </div>
 
    <!--end columns-->
