--- a/allonsy/allonsy_main/templates/allonsy/user_base.html
+++ b/allonsy/allonsy_main/templates/allonsy/user_base.html
@@ -109,109 +109,6 @@
       </div>
     </div>
 
-    <!--Instantiate column structure -->
-        <!--TODO: Add 20px margin-bottom to section above-->
-    <div class="row">
-
-    <!--Left column-->
-        <div class="columns small-3">
-          <div class="row">
-            <div class="columns small-12">
-              <div class="row">
-                <div class="columns small-12">
-                  <h5>Affiliations</h5>
-                </div>
-              </div>
-              <div class="row">
-                <div class="columns small-12">
-                  {% for org in orgs_affil %}
-                    <a href="/organization/{{ org.relation_url }}"><span class="label default">{{ org.relation_name }}</span></a>
-                  {% endfor %}
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="row">
-            <div class="columns small-12">
-              <div class="row">
-                <div class="columns small-12">
-                  <h5>Interests</h5>
-                </div>
-              </div>
-              <div class="row">
-                <div class="columns small-12">
-                  {% for org in orgs_affil %}
-                    <a href="/organization/{{ org.relation_url }}"><span class="label default">{{ org.relation_name }}</span></a>
-                  {% endfor %}
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="row">
-            <div class="columns small-12">
-              <div class="row">
-                <div class="columns small-12">
-                  <h5>Achievements</h5>
-                </div>
-              </div>
-              <div class="row">
-                <div class="columns small-12">
-                  {% for org in orgs_affil %}
-                    <a href="/organization/{{ org.relation_url }}"><span class="label default">{{ org.relation_name }}</span></a>
-                  {% endfor %}
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-    <!--Right column-->
-        <div class="columns small-9">
-          <div class="row">
-            <div class="columns small-12">
-              <div class="row">
-                <div class="columns small-12">
-                  <h5>About Me</h5>
-                  {{ profile_aboutme.profile_aboutme| linebreaks }}
-                </div>
-              </div>
-              <div class="row">
-                <div class="columns 12-small">
-                  <h5>Our common connections</h5>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="row">
-            <div class="columns small-12">
-              <div class="row">
-                <div class="columns small-12">
-                  <h5>RoomTraits</h5>
-                </div>
-              </div>
-              <div class="row">
-                <div class="columns 12-small">
-                  Text goes here
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="row">
-            <div class="columns small-12">
-              <div class="row">
-                <div class="columns small-12">
-                  <h5>Roommate Recommendations</h5>
-                </div>
-              </div>
-              <div class="row">
-                <div class="columns 12-small">
-                  Text goes here
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-
-   <!--end columns-->
-    </div>
+   {% block usermain %}{% endblock usermain %}
 
 {% endblock content %}
