--- a/allonsy/allonsy_main/templates/allonsy/app.html
+++ b/allonsy/allonsy_main/templates/allonsy/app.html
@@ -4,46 +4,12 @@
     <meta charset="utf-8" />
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Allonsy | Welcome</title>
+    <title>Allonsy | Login</title>
     <link rel="stylesheet" href="/static/css/foundation.css" />
     <link rel="stylesheet" href="/static/css/static-app.css" />
   </head>
   <body id="pages-app-background">
 
-    <!--<div class="expanded row">
-        <div class="columns small-1 small-offset-11">
-            <button class="button" type="button" data-toggle="example-dropdown">Toggle Dropdown</button>
-              <div class="dropdown-pane" id="example-dropdown" data-dropdown data-auto-focus="true">
-
-                <form id="login_form" method="post" action="/login/">
-                    {% csrf_token %}
-
-                    <div class="row">
-                        <div class="large-12 columns">
-                            <label>Username
-                                <input type="text" name="username" placeholder="Please enter your username" />
-                            </label>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="large-12 columns">
-                            <label>Password
-                                <input type="password" name="password" placeholder="Please enter your password" />
-                            </label>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="large-4 columns">
-                            <input type="submit" class="button" value="Submit" />
-                        </div>
-                    </div>
-
-
-                </form>
-
-              </div>
-        </div>
-    </div> -->
     <div class="row expanded slide">
       <div class="slidecontainer">
         <div class="row expanded">
