--- a/allonsy/allonsy_main/templates/allonsy/forms/user_edituser.html
+++ b/allonsy/allonsy_main/templates/allonsy/forms/user_edituser.html
@@ -112,7 +112,7 @@
               <input type="submit" class="success expanded button" value="Save changes" />
             </div>
             <div class="columns small-6">
-              <a href="/{{ user_account_url}}/user/{{ req_user.username }}" class="alert expanded button">Cancel changes</a>
+              <a href="{% url 'resolve_user_url' req_user.username %}" class="alert expanded button">Cancel changes</a>
             </div>
           </div>
         </div>
