--- a/allonsy/allonsy_main/templates/allonsy/user_base.html
+++ b/allonsy/allonsy_main/templates/allonsy/user_base.html
@@ -48,12 +48,45 @@
               <div class="row">
                 {% if cur_user == req_user %}
                 <div class="columns small-3">
-                  <a href="/{{ user_account_url }}/user/{{ req_user.username }}/edit/profile" class="button default-accent">Edit your profile</a>
+                  <a href="/user/{{ req_user.username }}/edit/profile" class="button default-accent">Edit your profile</a>
                 </div>
-                {% else %}
+                {% elif relation_status == 'None' %}
                 <div class="columns small-3">
-                  <a href="" class="button">Add as connection</a>
+                  <a data-open="modalConnection" class="button default-accent">Add as connection</a>
                 </div>
+
+                <div class="reveal" id="modalConnection" data-reveal>
+                  <form id="do_user_connect_form" method="post" action="{% url 'do_user_connect' req_user %}">
+                  {% csrf_token %}
+                  <h5>Connect with {{req_user.first_name}}?</h5>
+
+                  <label>Connection type
+                    <select name="relation_type">
+                      <option value="L">Personal</option>
+                      <option value="R">Add as Roommate</option>
+                    </select>
+                  </label>
+
+                  <label>Introduce yourself!
+                    <textarea name="interaction_text" placeholder="Please add me as a connection."></textarea>
+                  </label>
+
+                  <input type="submit" class="button" value="Send request" />
+
+                    {{form.errors}}
+
+                  </form>
+                </div>
+
+                {% elif relation_status.relation_status == 'P' %}
+                <a href="" class="button warning">Connection pending...</a>
+
+                {% elif relation_status == 'A' %}
+                <a href="" class="button success">You're connected!</a>
+
+                {% else %}
+                <a href="" class="button error">Connections unavailable</a>
+
                 {% endif %}
                 <div class="columns small-9">
                   {% if cur_user == req_user %}
@@ -65,7 +98,7 @@
                   </div>
                   {% else %}
                   <div class="columns small-6">
-                    <button class="dropdown button" data-toggle="on-campus-contact-data">On-campus contact information</button>
+                    <button class="dropdown button default-accent" data-toggle="on-campus-contact-data">On-campus contact information</button>
                     <div class="dropdown-pane" id="on-campus-contact-data" data-dropdown data-auto-focus="true">
                       <table class="hover">
                         <tbody>
@@ -82,7 +115,7 @@
                     </div>
                   </div>
                   <div class="columns small-6">
-                    <button class="dropdown button" data-toggle="home-contact-data">Personal contact information</button>
+                    <button class="dropdown button default-accent" data-toggle="home-contact-data">Personal contact information</button>
                     <div class="dropdown-pane" id="home-contact-data" data-dropdown data-auto-focus="true">
                       <table class="hover">
                         <tbody>
