3 August Start of Day

--- a/allonsy/allonsy_main/templates/allonsy/base.html
+++ b/allonsy/allonsy_main/templates/allonsy/base.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Allonsy | Welcome</title>
+    <title>Allonsy | Let's go!</title>
     {% load static %}
     <link rel="stylesheet" href="/static/css/foundation.css" />
     <link rel="stylesheet" href="/static/css/app.css" />
