--- a/allonsy/allonsy_main/templates/allonsy/roles_base.html
+++ b/allonsy/allonsy_main/templates/allonsy/roles_base.html
@@ -7,7 +7,7 @@
       <div class="columns small-2">
          <div class="row">
             <div class="columns small-12">
-               Picture!
+                <center><img class="img-circle-sm" src="http://i.imgur.com/lnRFVtA.jpg" /></center>
             </div>
             <div class="columns small-12">
                <h5><center>{{req_user.first_name}} {{req_user.last_name}}</center></h5>
@@ -25,6 +25,16 @@
                 </ul>
               </li>
               <li><a href="#Item-2">Facilities</a></li>
+              <li>
+                  <a href="#Item-2">Create a new report</a>
+                  <ul class="vertical menu">
+                      <li><a href="#">Incident</a></li>
+                      <li><a href="#">Rounds</a></li>
+                      <li><a href="#">Check-in</a></li>
+                      <li><a href="#">Check-out</a></li>
+                      <li><a href="#">On-call</a></li>
+                  </ul>
+              </li>
             </ul>
          </div>
       </div>
