--- a/allonsy/allonsy_main/templates/allonsy/interactions.html
+++ b/allonsy/allonsy_main/templates/allonsy/interactions.html
@@ -133,11 +133,11 @@
             {% for target in interact.interaction_target.all %}
             <li>
               <a href="#">
-                {% if interact.interaction_status == 'O' and interact.interaction_direction = 'R' %}
+                {% if interact.interaction_status == 'O' and interact.interaction_target == current_user %}
                 <b>[NEW] {{ sender.first_name }} {{ sender.last_name }}:</b> {{interact.interaction_subject}}
-                {% elif interact.interaction_status == 'I' and interact.interaction_direction = 'R' %}
+                {% elif interact.interaction_status == 'I' and interact.interaction_target == current_user %}
                 <b>{{ sender.first_name }} {{ sender.last_name }}:</b> {{interact.interaction_subject}}
-                 {% elif interact.interaction_direction = 'S' %}
+                 {% elif interact.interaction_sender = current_user %}
                 <b>{{ target.first_name }} {{ target.last_name }}:</b> {{interact.interaction_subject}}
                 {% endif %}
               </a>
