--- a/allonsy/allonsy_main/templates/allonsy/user_admin.html
+++ b/allonsy/allonsy_main/templates/allonsy/user_admin.html
@@ -103,6 +103,16 @@
                 </ul>
               </li>
               <li>
+                <a href="#">Workflows</a>
+                <ul class="vertical menu">
+                  {% if user_extension_object.user_type == 'X' or user_extension_object.user_type == 'A' or user_extension_object.user_type == 'D' %}
+                  <li><a href="{% url 'wf_set_add_or_edit' %}">Create new</a></li>
+                  <li><a href="#">Edit existing</a></li>
+                  {% else %}
+                  {% endif %}
+                </ul>
+              </li>
+              <li>
                 <a href="{% url 'user_admin' %}">Return to dashboard</a>
               </li>
             </ul>
