--- a/allonsy/allonsy_main/templates/allonsy/user_main.html
+++ b/allonsy/allonsy_main/templates/allonsy/user_main.html
@@ -66,11 +66,24 @@
                   {{ profile_aboutme.profile_aboutme| linebreaks }}
                 </div>
               </div>
+              {% if req_user.id = user.id %}
+              {% else %}
               <div class="row">
                 <div class="columns 12-small">
                   <h5>Our common connections</h5>
                 </div>
               </div>
+              <div class="row">
+                <div class="columns small-12">
+                  {% for connect in common_connects %}
+                  <div class="columns small-2">
+                      {{connect.first_name }} {{ connect.last_name }}
+                  </div>
+                  {% endfor %}
+                  <div class="columns small-2 end"></div>
+                </div>
+              </div>
+              {% endif %}
             </div>
           </div>
           <div class="row">
@@ -81,9 +94,7 @@
                 </div>
               </div>
               <div class="row">
-                <div class="columns 12-small">
-                  Text goes here
-                </div>
+
               </div>
             </div>
           </div>
@@ -95,9 +106,7 @@
                 </div>
               </div>
               <div class="row">
-                <div class="columns 12-small">
-                  Text goes here
-                </div>
+
               </div>
             </div>
           </div>
